# Note: This crate must be built using build.sh

[package]
name = "break-solana-program"
version = "0.1.0"
description = "Break Solana program"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/break"
license = "Apache-2.0"
homepage = "https://break.solana.com/"
edition = "2018"

[dependencies]
solana-sdk = { version = "=1.0.14", default-features = false, features = ["program"] }
solana-sdk-bpf-test = { path = "../server/node_modules/@solana/web3.js/bpf-sdk/rust/test", default-features = false }

[lib]
crate-type = ["cdylib", "lib"]
name = "break_solana_program"
