# Note: This crate must be built using build.sh

[package]
name = "break-solana-program"
version = "0.1.0"
description = "Break Solana program"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/break"
license = "Apache-2.0"
homepage = "https://break.solana.com/"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
solana-sdk = { version = "=1.3.14", default-features = false, features = ["program"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "break_solana_program"
