# Note: This crate must be built using build.sh

[package]
name = "break-solana-program"
version = "0.1.0"
description = "Break Solana program"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/break"
license = "Apache-2.0"
homepage = "https://break.solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.6.6"

[lib]
crate-type = ["cdylib", "lib"]
name = "break_solana_program"
